relaxng-gen/tests/snapshots/build__test-u32-facets.snap
---
source: relaxng-gen/tests/build.rs
expression: combined
---
--- config/port.rs ---
//!`port` module
use crate::{Error, Result, ToXml};
use std::str::FromStr;
///`<port/>` element
#[derive(Debug, Clone, PartialEq, Eq, Hash)]
pub struct Port {
    pub value: bounded_integer::BoundedU32<1024u32, 65535u32>,
}
impl ToXml for Port {
    type Builder = PortBuilder;
    fn to_xml<W>(&self, writer: &mut quick_xml::Writer<W>) -> Result<()>
    where
        W: std::io::Write,
    {
        use quick_xml::events::{Event, BytesStart, BytesEnd, BytesText};
        let mut xml_start = BytesStart::new("port");
        let empty = {
            true
                && ({
                    let elem = &self.value;
                    false
                })
        };
        if empty {
            writer.write_event(Event::Empty(xml_start))?;
        } else {
            writer.write_event(Event::Start(xml_start))?;
            {
                let elem = &self.value;
                writer.write_event(Event::Text(BytesText::new(&elem.to_string())))?;
            }
            writer.write_event(Event::End(BytesEnd::new("port")))?;
        }
        Ok(())
    }
}
impl Port {
    pub fn from_xml(node: &roxmltree::Node) -> Result<Self> {
        let mut builder = Self::builder();
        for child in node.children() {
            match child.tag_name().name() {
                _ => continue,
            }
        }
        if let Some(val) = node.text() {
            match val {
                val if val
                    .parse::<bounded_integer::BoundedU32<1024u32, 65535u32>>()
                    .is_ok() => {
                    builder
                        .value(
                            val
                                .parse::<bounded_integer::BoundedU32<1024u32, 65535u32>>()
                                .map_err(|e| Error::ParseError("value", Box::new(e)))?,
                        )?;
                }
                _ => {}
            }
        }
        builder.build()
    }
}
impl core::fmt::Display for Port {
    fn fmt(&self, f: &mut core::fmt::Formatter<'_>) -> std::fmt::Result {
        let mut writer = quick_xml::Writer::new_with_indent(
            std::io::Cursor::new(Vec::new()),
            b' ',
            2,
        );
        self.to_xml(&mut writer).expect("Failed to generate XML");
        let res = writer.into_inner().into_inner();
        let str = String::from_utf8(res).expect("Failed to convert bytes to string");
        f.write_str(&str)
    }
}
///`<port/>` builder
#[derive(Default, Debug, Clone, PartialEq, Eq, Hash)]
pub struct PortBuilder {
    pub value: Option<bounded_integer::BoundedU32<1024u32, 65535u32>>,
}
impl PortBuilder {
    pub fn value<T>(&mut self, value: T) -> Result<&mut Self>
    where
        T: TryInto<bounded_integer::BoundedU32<1024u32, 65535u32>>,
        Error: From<
            <T as TryInto<bounded_integer::BoundedU32<1024u32, 65535u32>>>::Error,
        >,
    {
        self.value = Some(value.try_into()?);
        Ok(self)
    }
    /**
            Attempt to build [`Port`].

            If the element is not valid, an error is returned.
            */
    pub fn build(&self) -> Result<Port> {
        let value = Clone::clone(
            self.value.as_ref().ok_or(Error::BuilderMissingField("port", "value"))?,
        );
        Ok(Port { value })
    }
}

--- config/timeout.rs ---
//!`timeout` module
use crate::{Error, Result, ToXml};
use std::str::FromStr;
///`<timeout/>` element
#[derive(Debug, Clone, PartialEq, Eq, Hash)]
pub struct Timeout {
    pub value: bounded_integer::BoundedU32<1u32, 3600u32>,
}
impl ToXml for Timeout {
    type Builder = TimeoutBuilder;
    fn to_xml<W>(&self, writer: &mut quick_xml::Writer<W>) -> Result<()>
    where
        W: std::io::Write,
    {
        use quick_xml::events::{Event, BytesStart, BytesEnd, BytesText};
        let mut xml_start = BytesStart::new("timeout");
        let empty = {
            true
                && ({
                    let elem = &self.value;
                    false
                })
        };
        if empty {
            writer.write_event(Event::Empty(xml_start))?;
        } else {
            writer.write_event(Event::Start(xml_start))?;
            {
                let elem = &self.value;
                writer.write_event(Event::Text(BytesText::new(&elem.to_string())))?;
            }
            writer.write_event(Event::End(BytesEnd::new("timeout")))?;
        }
        Ok(())
    }
}
impl Timeout {
    pub fn from_xml(node: &roxmltree::Node) -> Result<Self> {
        let mut builder = Self::builder();
        for child in node.children() {
            match child.tag_name().name() {
                _ => continue,
            }
        }
        if let Some(val) = node.text() {
            match val {
                val if val
                    .parse::<bounded_integer::BoundedU32<1u32, 3600u32>>()
                    .is_ok() => {
                    builder
                        .value(
                            val
                                .parse::<bounded_integer::BoundedU32<1u32, 3600u32>>()
                                .map_err(|e| Error::ParseError("value", Box::new(e)))?,
                        )?;
                }
                _ => {}
            }
        }
        builder.build()
    }
}
impl core::fmt::Display for Timeout {
    fn fmt(&self, f: &mut core::fmt::Formatter<'_>) -> std::fmt::Result {
        let mut writer = quick_xml::Writer::new_with_indent(
            std::io::Cursor::new(Vec::new()),
            b' ',
            2,
        );
        self.to_xml(&mut writer).expect("Failed to generate XML");
        let res = writer.into_inner().into_inner();
        let str = String::from_utf8(res).expect("Failed to convert bytes to string");
        f.write_str(&str)
    }
}
///`<timeout/>` builder
#[derive(Default, Debug, Clone, PartialEq, Eq, Hash)]
pub struct TimeoutBuilder {
    pub value: Option<bounded_integer::BoundedU32<1u32, 3600u32>>,
}
impl TimeoutBuilder {
    pub fn value<T>(&mut self, value: T) -> Result<&mut Self>
    where
        T: TryInto<bounded_integer::BoundedU32<1u32, 3600u32>>,
        Error: From<<T as TryInto<bounded_integer::BoundedU32<1u32, 3600u32>>>::Error>,
    {
        self.value = Some(value.try_into()?);
        Ok(self)
    }
    /**
            Attempt to build [`Timeout`].

            If the element is not valid, an error is returned.
            */
    pub fn build(&self) -> Result<Timeout> {
        let value = Clone::clone(
            self.value.as_ref().ok_or(Error::BuilderMissingField("timeout", "value"))?,
        );
        Ok(Timeout { value })
    }
}

--- config.rs ---
//!`config` module
use crate::{Error, Result, ToXml};
use std::str::FromStr;
pub mod port;
use port::Port;
pub mod timeout;
use timeout::Timeout;
///`<config/>` element
#[derive(Debug, Clone, PartialEq, Eq, Hash)]
pub struct Config {
    pub port: Port,
    pub timeout: Timeout,
}
impl ToXml for Config {
    type Builder = ConfigBuilder;
    fn to_xml<W>(&self, writer: &mut quick_xml::Writer<W>) -> Result<()>
    where
        W: std::io::Write,
    {
        use quick_xml::events::{Event, BytesStart, BytesEnd, BytesText};
        let mut xml_start = BytesStart::new("config");
        let empty = {
            true
                && ({
                    let elem = &self.port;
                    false
                })
                && ({
                    let elem = &self.timeout;
                    false
                })
        };
        if empty {
            writer.write_event(Event::Empty(xml_start))?;
        } else {
            writer.write_event(Event::Start(xml_start))?;
            {
                let elem = &self.port;
                elem.to_xml(writer)?;
            }
            {
                let elem = &self.timeout;
                elem.to_xml(writer)?;
            }
            writer.write_event(Event::End(BytesEnd::new("config")))?;
        }
        Ok(())
    }
}
impl Config {
    pub fn from_xml(node: &roxmltree::Node) -> Result<Self> {
        let mut builder = Self::builder();
        for child in node.children() {
            match child.tag_name().name() {
                "port" if Port::from_xml(&child).is_ok() => {
                    builder.port(Port::from_xml(&child)?)?;
                }
                "timeout" if Timeout::from_xml(&child).is_ok() => {
                    builder.timeout(Timeout::from_xml(&child)?)?;
                }
                _ => continue,
            }
        }
        if let Some(val) = node.text() {
            match val {
                _ => {}
            }
        }
        builder.build()
    }
}
impl core::fmt::Display for Config {
    fn fmt(&self, f: &mut core::fmt::Formatter<'_>) -> std::fmt::Result {
        let mut writer = quick_xml::Writer::new_with_indent(
            std::io::Cursor::new(Vec::new()),
            b' ',
            2,
        );
        self.to_xml(&mut writer).expect("Failed to generate XML");
        let res = writer.into_inner().into_inner();
        let str = String::from_utf8(res).expect("Failed to convert bytes to string");
        f.write_str(&str)
    }
}
///`<config/>` builder
#[derive(Default, Debug, Clone, PartialEq, Eq, Hash)]
pub struct ConfigBuilder {
    pub port: Option<Port>,
    pub timeout: Option<Timeout>,
}
impl ConfigBuilder {
    pub fn port<T>(&mut self, port: T) -> Result<&mut Self>
    where
        T: TryInto<Port>,
        Error: From<<T as TryInto<Port>>::Error>,
    {
        self.port = Some(port.try_into()?);
        Ok(self)
    }
    pub fn timeout<T>(&mut self, timeout: T) -> Result<&mut Self>
    where
        T: TryInto<Timeout>,
        Error: From<<T as TryInto<Timeout>>::Error>,
    {
        self.timeout = Some(timeout.try_into()?);
        Ok(self)
    }
    /**
            Attempt to build [`Config`].

            If the element is not valid, an error is returned.
            */
    pub fn build(&self) -> Result<Config> {
        let port = Clone::clone(
            self.port.as_ref().ok_or(Error::BuilderMissingField("config", "port"))?,
        );
        let timeout = Clone::clone(
            self.timeout.as_ref().ok_or(Error::BuilderMissingField("config", "timeout"))?,
        );
        Ok(Config { port, timeout })
    }
}

--- lib.rs ---
#![doc = concat!(
    "Generated from ",
    "'/home/elmarco/src/relaxng-rust/relaxng-gen/tests/fixtures/u32-facets.rng'",
    " schema."
)]
#![allow(dead_code)]
#![allow(unused_mut)]
#![allow(unused_variables)]
#![allow(unused_imports)]
use thiserror::Error;
pub mod config;
pub use config::*;
/// The error type used by this crate.
#[derive(Error, Debug)]
pub enum Error {
    #[error("IO error: {0}")]
    Io(#[from] std::io::Error),
    #[error("From UTF-8 error: {0}")]
    FromUtf8Error(#[from] std::string::FromUtf8Error),
    #[error("{0} builder is missing mandatory field: {1}")]
    BuilderMissingField(&'static str, &'static str),
    #[error("{0} builder cannot build a variant")]
    BuilderVariant(&'static str),
    #[error("String too short, expected at least {0} characters, got {1}")]
    TooShort(usize, usize),
    #[error("String too long, expected at most {0} characters, got {1}")]
    TooLong(usize, usize),
    #[error("String '{0}' does not match pattern '{1}'")]
    PatternMismatch(&'static str, String),
    #[error("Failed to compile regex: {0}")]
    RegexError(#[from] regex::Error),
    #[error("Failed to parse '{0}': {1}")]
    ParseError(
        &'static str,
        #[source]
        Box<dyn std::error::Error + Send + Sync + 'static>,
    ),
}
impl From<std::convert::Infallible> for Error {
    fn from(_: std::convert::Infallible) -> Self {
        unreachable!("Infallible error should not occur")
    }
}
/// Helper trait for this crate XML types.
pub trait ToXml {
    /// The associated builder type.
    type Builder: Default;
    /// Creates a new builder for this type.
    fn builder() -> Self::Builder {
        Self::Builder::default()
    }
    /// Writes Events to a XML writer.
    fn to_xml<W>(&self, writer: &mut quick_xml::Writer<W>) -> Result<()>
    where
        W: std::io::Write;
}
#[doc(hidden)]
pub trait RegexPattern {
    const REGEX: &'static str;
}
#[doc(hidden)]
#[derive(Debug, Clone, Copy, PartialEq, Eq, Hash)]
pub struct NoPattern;
impl RegexPattern for NoPattern {
    const REGEX: &'static str = "";
}
/// A string type with length constraints and optional runtime regex validation.
#[derive(Debug, Clone, PartialEq, Eq, Hash)]
pub struct ConstrainedString<
    const MIN_LEN: usize,
    const MAX_LEN: usize,
    P: RegexPattern = NoPattern,
> {
    value: String,
    _phantom: std::marker::PhantomData<P>,
}
impl<
    const MIN: usize,
    const MAX: usize,
    P: RegexPattern,
> ConstrainedString<MIN, MAX, P> {
    pub const NO_MIN_CONSTRAINT: usize = 0;
    pub const NO_MAX_CONSTRAINT: usize = usize::MAX;
    pub fn try_new(value: impl Into<String>) -> Result<Self> {
        let s = value.into();
        Self::validate(&s)?;
        Ok(Self {
            value: s,
            _phantom: std::marker::PhantomData,
        })
    }
    fn validate(s: &str) -> Result<()> {
        fn get_compiled_regex(pattern: &'static str) -> Result<regex::Regex> {
            /// Registry for compiled regex patterns
            static REGEX_REGISTRY: std::sync::OnceLock<
                std::sync::Mutex<std::collections::HashMap<&'static str, regex::Regex>>,
            > = std::sync::OnceLock::new();
            if pattern.is_empty() {
                return Ok(regex::Regex::new(".*").unwrap());
            }
            let registry = REGEX_REGISTRY
                .get_or_init(|| std::sync::Mutex::new(std::collections::HashMap::new()));
            let mut map = registry.lock().unwrap();
            if let Some(regex) = map.get(pattern) {
                return Ok(regex.clone());
            }
            match regex::Regex::new(pattern) {
                Ok(regex) => {
                    let result = regex.clone();
                    map.insert(pattern, regex);
                    Ok(result)
                }
                Err(e) => Err(Error::RegexError(e)),
            }
        }
        if MIN > Self::NO_MIN_CONSTRAINT && s.len() < MIN {
            return Err(Error::TooShort(MIN, s.len()));
        }
        if MAX < Self::NO_MAX_CONSTRAINT && s.len() > MAX {
            return Err(Error::TooLong(MAX, s.len()));
        }
        if !P::REGEX.is_empty() {
            let regex = get_compiled_regex(P::REGEX)?;
            if !regex.is_match(s) {
                return Err(Error::PatternMismatch(P::REGEX, s.to_string()));
            }
        }
        Ok(())
    }
    /// Returns the string as a `&str`.
    #[must_use]
    pub fn as_str(&self) -> &str {
        &self.value
    }
    /// Converts the constrained string into a `String`, consuming it.
    #[must_use]
    pub fn into_string(self) -> String {
        self.value
    }
}
impl<const MIN: usize, const MAX: usize, P: RegexPattern> std::ops::Deref
for ConstrainedString<MIN, MAX, P> {
    type Target = str;
    fn deref(&self) -> &Self::Target {
        &self.value
    }
}
impl<const MIN: usize, const MAX: usize, P: RegexPattern> std::fmt::Display
for ConstrainedString<MIN, MAX, P> {
    fn fmt(&self, f: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
        write!(f, "{}", self.value)
    }
}
impl<const MIN: usize, const MAX: usize, P: RegexPattern> AsRef<str>
for ConstrainedString<MIN, MAX, P> {
    fn as_ref(&self) -> &str {
        &self.value
    }
}
impl<const MIN: usize, const MAX: usize, P: RegexPattern> std::str::FromStr
for ConstrainedString<MIN, MAX, P> {
    type Err = Error;
    fn from_str(s: &str) -> Result<Self> {
        Self::try_new(s)
    }
}
impl<const MIN: usize, const MAX: usize, P: RegexPattern> TryFrom<&str>
for ConstrainedString<MIN, MAX, P> {
    type Error = Error;
    fn try_from(s: &str) -> Result<Self> {
        Self::try_new(s)
    }
}
/// A specialized Result type where the error is hard-wired to [`enum@Error`].
pub type Result<T, E = Error> = std::result::Result<T, E>;

--- main.rs ---
use std::path::Path;
use std::{env::args, fs};
fn main() {
    let path = args().nth(1).expect("No XML file path provided");
    let xml_path = Path::new(&path);
    let xml = fs::read_to_string(xml_path).expect("Failed to read test XML file");
    let xml = roxmltree::Document::parse(&xml).expect("Failed to parse XML");
    let root = xml.root().first_child().expect("No root element found");
    let res = test_u32_facets::Config::from_xml(&root).unwrap();
    let res = res.to_string();
    println!("{}", res);
}
